--- a/css/sombra.css
+++ b/css/sombra.css
@@ -3,10 +3,12 @@ body{
 	font-family: helvetica, arail, sans-serif;
 	font-size: 20px;
 	line-height: 30px;
+	background-color: #ee77f2;
+
 }
 
 header{
-	background-color: #c82ad4;
+	background-color: #9c13a1;
 	text-align: center;
 	padding-top: 50px;
 	padding-bottom: 50px;
@@ -16,6 +18,9 @@ h1{
 	font-family: 'Dancing Script', cursive;
 	font-size: 50px;
 }
+
+/* header styles */
+/*write your comment here*/
 
 header h1{
 	color: darkblue;
@@ -31,14 +36,15 @@ header img{
 
 main{
 	max-width: 800px;
-	margin: 0 auto;
 	padding: 20px;
+	background-color: #ee77f2;
 }
 
 h2{
 	font-size: 35px;
 	margin: 40px 10px;
 }
+
 
 p{
 	font-size: 20px;
@@ -49,14 +55,14 @@ a{
 }
 
 a:hover{
-	color: #c6afc9;
+	color: #a480f2;
 }
 
 footer{
 	color: white;
 	text-align: center;
 	padding: 50px;
-	background-color:#c82ad4 ;
+	background-color:#9c13a1 ;
 
 }
 
@@ -70,3 +76,15 @@ p.caption{
 	margin: 0;
 }
 
+li{
+	width: 1400px;
+}
+
+img{
+	width: 300px;
+	
+}
+
+img[src*="sombra2.jpg"]{
+	padding-left: 20px;
+}
